--- a/src/Components/Loading-Spinner/spinner-loading.css
+++ b/src/Components/Loading-Spinner/spinner-loading.css
@@ -15,7 +15,7 @@
     height: 30px;
     border-radius: 50%;
     border: 5px solid #04AA6D;
-    border-bottom-color: #FF3D00;
+    border-bottom-color: #6366F1;
     box-sizing: border-box;
     animation: rotation 0.6s linear infinite;
   }
@@ -27,4 +27,16 @@
     100% {
       transform: rotate(360deg);
     }
+  }
+
+  @media only screen and (min-width:330px) and (max-width: 600px) {
+    .loader{
+      font-size: 40px;
+    }
+    .loader::before {
+      left: 30px;
+      bottom: 15px;
+      width: 25px;
+      height: 25px;
+  }
   }
